Bug 466346 - kwin_wayland crashes in KWaylandServer::OutputInterface::handle() when disabling and re-enabling a screen and letting it get turned off via power management
Summary: kwin_wayland crashes in KWaylandServer::OutputInterface::handle() when disabl...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.27.4
Platform: unspecified Linux
: HI crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 466596 467234 467298 467795 467881 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-02-24 11:29 UTC by northon_patrick3
Modified: 2023-04-08 07:08 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.4
Sentry Crash Report:


Attachments
Backtrace (24.79 KB, text/plain)
2023-02-24 11:29 UTC, northon_patrick3
Details
Backtrace: openSUSE TW, 5.27.3 (17.63 KB, text/plain)
2023-03-25 15:11 UTC, postix
Details
kWin Support Info: openSUSE TW, 5.27.3 (6.94 KB, text/plain)
2023-03-25 15:16 UTC, postix
Details
kwin_wayland stack trace (111.64 KB, text/plain)
2023-04-07 17:53 UTC, kfsbgd4o48tf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description northon_patrick3 2023-02-24 11:29:35 UTC
Created attachment 156672 [details]
Backtrace

SUMMARY
kwin_wayland will crash reliably after these steps:

STEPS TO REPRODUCE
1. Deactivate a screen.
2. Reactivate the screen.
3. Wait for dpms to turn off screens.

OBSERVED RESULT
kwin_wayland crashes.

EXPECTED RESULT
Not crashing.

SOFTWARE/OS VERSIONS
Arch Linux
KDE Plasma Version: 5.27.1
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel version: 6.2.0

ADDITIONAL INFORMATION
This is on a Dell G5 SE laptop with an external monitor plugged in the DP port.
Comment 1 Nicolas Fella 2023-02-24 20:16:43 UTC
#0  std::__uniq_ptr_impl<KWaylandServer::OutputInterfacePrivate, std::default_delete<KWaylandServer::OutputInterfacePrivate> >::_M_ptr() const (this=0x10) at /usr/include/c++/12.2.1/bits/unique_ptr.h:191
#1  std::unique_ptr<KWaylandServer::OutputInterfacePrivate, std::default_delete<KWaylandServer::OutputInterfacePrivate> >::get() const (this=0x10) at /usr/include/c++/12.2.1/bits/unique_ptr.h:462
#2  std::unique_ptr<KWaylandServer::OutputInterfacePrivate, std::default_delete<KWaylandServer::OutputInterfacePrivate> >::operator->() const (this=0x10) at /usr/include/c++/12.2.1/bits/unique_ptr.h:455
#3  KWaylandServer::OutputInterface::handle() const (this=0x0) at /usr/src/debug/kwin/kwin-5.27.1/src/wayland/output_interface.cpp:263
#4  0x00007f61e8be928e in KWaylandServer::DpmsInterface::sendMode() (this=0x55c4718b80c0) at /usr/src/debug/kwin/kwin-5.27.1/src/wayland/dpms_interface.cpp:141
#5  0x00007f61e8be9656 in operator() (__closure=0x55c4718c6770) at /usr/src/debug/kwin/kwin-5.27.1/src/wayland/dpms_interface.cpp:92
#6  QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, KWaylandServer::DpmsInterface::DpmsInterface(KWaylandServer::OutputInterface*, wl_resource*)::<lambda()> >::call (arg=<optimized out>, f=...) at /usr/include/qt/QtCore/qobjectdefs_impl.h:146
#7  QtPrivate::Functor<KWaylandServer::DpmsInterface::DpmsInterface(KWaylandServer::OutputInterface*, wl_resource*)::<lambda()>, 0>::call<QtPrivate::List<>, void> (arg=<optimized out>, f=...) at /usr/include/qt/QtCore/qobjectdefs_impl.h:256
#8  QtPrivate::QFunctorSlotObject<KWaylandServer::DpmsInterface::DpmsInterface(KWaylandServer::OutputInterface*, wl_resource*)::<lambda()>, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=<optimized out>, this_=0x55c4718c6760, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt/QtCore/qobjectdefs_impl.h:443
#9  0x00007f61e70c7891 in  () at /usr/lib/libQt5Core.so.5
#10 0x00007f61e89d78de in KWin::Output::setState(KWin::Output::State const&) (this=0x55c47083a080, state=...) at /usr/src/debug/kwin/kwin-5.27.1/src/core/output.cpp:292
#11 0x00007f61e8ba4ee4 in KWin::DrmOutput::updateDpmsMode(KWin::Output::DpmsMode) (this=this@entry=0x55c47083a080, dpmsMode=dpmsMode@entry=KWin::Output::DpmsMode::Off) at /usr/src/debug/kwin/kwin-5.27.1/src/backends/drm/drm_output.cpp:353
#12 0x00007f61e8ba78c6 in KWin::DrmOutput::setDrmDpmsMode(KWin::Output::DpmsMode) (this=0x55c47083a080, mode=KWin::Output::DpmsMode::Off) at /usr/src/debug/kwin/kwin-5.27.1/src/backends/drm/drm_output.cpp:276
#13 0x00007f61e70c7891 in  () at /usr/lib/libQt5Core.so.5
#14 0x00007f61e70c9dff in QTimer::timeout(QTimer::QPrivateSignal) () at /usr/lib/libQt5Core.so.5
#15 0x00007f61e70ba18e in QObject::event(QEvent*) () at /usr/lib/libQt5Core.so.5
#16 0x00007f61e677a01c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#17 0x00007f61e7095ff8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#18 0x00007f61e70e2cfa in QTimerInfoList::activateTimers() () at /usr/lib/libQt5Core.so.5
#19 0x00007f61e70e3532 in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#20 0x000055c46fcc9212 in QUnixEventDispatcherQPA::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
#21 0x00007f61e708e6dc in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#22 0x00007f61e7099339 in QCoreApplication::exec() () at /usr/lib/libQt5Core.so.5
#23 0x000055c46fbd15ed in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kwin/kwin-5.27.1/src/main_wayland.cpp:628
Comment 2 Nate Graham 2023-02-28 22:16:41 UTC
*** Bug 466596 has been marked as a duplicate of this bug. ***
Comment 3 Antonio Rojas 2023-03-17 18:59:29 UTC
*** Bug 467234 has been marked as a duplicate of this bug. ***
Comment 4 kfsbgd4o48tf 2023-03-21 14:06:47 UTC
Same here on 5.27.3 Fedora Kinoite

                                                 Stack trace of thread 33826:
                                                 #0  0x00007ff1bb9ff9a4 _ZNK14KWaylandServer15OutputInterface6handleEv (libkwin.so.5 + 0x3ff9a4)
                                                 #1  0x00007ff1bb9f26ef _ZN14KWaylandServer13DpmsInterface8sendModeEv (libkwin.so.5 + 0x3f26ef)
                                                 #2  0x00007ff1bb9f2a7a _ZN9QtPrivate18QFunctorSlotObjectIZN14KWaylandServer13DpmsInterfaceC4EPNS1_15OutputInterfaceEP11wl_resourceEUlvE0_Li0ENS_4ListIJEEEvE4implEiPNS_15QSlotObjectBaseEP7QObjectPPvPb (libkwin.so.5 + 0x3f2a7a)
                                                 #3  0x00007ff1b9cd0e96 _Z10doActivateILb0EEvP7QObjectiPPv (libQt5Core.so.5 + 0x2d0e96)
                                                 #4  0x00007ff1bb7f9651 _ZN4KWin6Output8setStateERKNS0_5StateE (libkwin.so.5 + 0x1f9651)
                                                 #5  0x00007ff1bb9aa619 _ZN4KWin9DrmOutput14updateDpmsModeENS_6Output8DpmsModeE (libkwin.so.5 + 0x3aa619)
                                                 #6  0x00007ff1bb9ab71d _ZN4KWin9DrmOutput14setDrmDpmsModeENS_6Output8DpmsModeE (libkwin.so.5 + 0x3ab71d)
                                                 #7  0x00007ff1b9cd0e96 _Z10doActivateILb0EEvP7QObjectiPPv (libQt5Core.so.5 + 0x2d0e96)
                                                 #8  0x00007ff1b9cd421e _ZN6QTimer7timeoutENS_14QPrivateSignalE (libQt5Core.so.5 + 0x2d421e)
                                                 #9  0x00007ff1b9cc7fc5 _ZN7QObject5eventEP6QEvent (libQt5Core.so.5 + 0x2c7fc5)
                                                 #10 0x00007ff1b93aed62 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt5Widgets.so.5 + 0x1aed62)
                                                 #11 0x00007ff1b9c9d4e8 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt5Core.so.5 + 0x29d4e8)
                                                 #12 0x00007ff1b9ced981 _ZN14QTimerInfoList14activateTimersEv (libQt5Core.so.5 + 0x2ed981)
                                                 #13 0x00007ff1b9cebf30 _ZN20QEventDispatcherUNIX13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt5Core.so.5 + 0x2ebf30)
                                                 #14 0x000056407a9915f1 _ZN23QUnixEventDispatcherQPA13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (kwin_wayland + 0x13b5f1)
                                                 #15 0x00007ff1b9c9bf3a _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE (libQt5Core.so.5 + 0x29bf3a)
                                                 #16 0x00007ff1b9ca4002 _ZN16QCoreApplication4execEv (libQt5Core.so.5 + 0x2a4002)
                                                 #17 0x000056407a8b1d21 main (kwin_wayland + 0x5bd21)
                                                 #18 0x00007ff1b8c4a510 __libc_start_call_main (libc.so.6 + 0x27510)
                                                 #19 0x00007ff1b8c4a5c9 __libc_start_main@@GLIBC_2.34 (libc.so.6 + 0x275c9)
                                                 #20 0x000056407a8b3885 _start (kwin_wayland + 0x5d885)
Comment 5 postix 2023-03-25 15:11:32 UTC
Created attachment 157571 [details]
Backtrace: openSUSE TW, 5.27.3

I just had a crash with the same stacktrace. It happened when I left the system, the screenlocker kicked in after 10 minutes and 10 minutes later the energy power saving settings disabled the screen(s):

journalctl
```
15:38:32 kscreenlocker_greet[13986]: kf.kirigami: Failed to find a Kirigami platform plugin
15:38:32 kscreenlocker_greet[13986]: qt.qpa.wayland: Wayland does not support QWindow::requestActivate()
(...)
15:48:32 plasmashell[2264]: org.kde.plasma.pulseaudio: No object for name "alsa_output.pci-0000_0c_00.4.analog-stereo.monitor"
15:48:33 systemd-coredump[14068]: [🡕] Process 2114 (kwin_wayland) of user 1000 dumped core.
(...)
```

dmesg
```
[ 7917.655122] show_signal_msg: 60 callbacks suppressed
[ 7917.655125] kwin_wayland[2114]: segfault at 10 ip 00007ff9e1bcead0 sp 00007fffc8304098 error 4 in libkwin.so.5.27.3[7ff9e196a000+316000] likely on CPU 11 (core 13, socket 0)
[ 7917.655132] Code: 42 58 48 85 c0 74 13 8b 40 04 85 c0 74 0c 48 8b 42 60 c3 0f 1f 80 00 00 00 00 31 c0 c3 90 66 66 2e 0f 1f 84 00 00 00 00 00 90 <48> 8b 57 10 48 8b 42 68 48 85 c0 74 13 8b 40 04 85 c0 74 0c 48 8b
```

backtrace
```
#0  std::__uniq_ptr_impl<KWaylandServer::OutputInterfacePrivate, std::default_delete<KWaylandServer::OutputInterfacePrivate> >::_M_ptr() const (this=0x10) at /usr/include/c++/13/bits/unique_ptr.h:200
#1  std::unique_ptr<KWaylandServer::OutputInterfacePrivate, std::default_delete<KWaylandServer::OutputInterfacePrivate> >::get() const (this=0x10) at /usr/include/c++/13/bits/unique_ptr.h:471
#2  std::unique_ptr<KWaylandServer::OutputInterfacePrivate, std::default_delete<KWaylandServer::OutputInterfacePrivate> >::operator->() const (this=0x10) at /usr/include/c++/13/bits/unique_ptr.h:464
#3  KWaylandServer::OutputInterface::handle() const (this=0x0) at /usr/src/debug/kwin-5.27.3/src/wayland/output_interface.cpp:263
#4  0x00007ff9e1bc0e3f in KWaylandServer::DpmsInterface::sendMode() (this=0x560780443c40) at /usr/src/debug/kwin-5.27.3/src/wayland/dpms_interface.cpp:141
#5  0x00007ff9e1bc11b6 in operator() (__closure=0x56077fc39790) at /usr/src/debug/kwin-5.27.3/src/wayland/dpms_interface.cpp:92
#6  QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, KWaylandServer::DpmsInterface::DpmsInterface(KWaylandServer::OutputInterface*, wl_resource*)::<lambda()> >::call (arg=<optimized out>, f=...) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:146
#7  QtPrivate::Functor<KWaylandServer::DpmsInterface::DpmsInterface(KWaylandServer::OutputInterface*, wl_resource*)::<lambda()>, 0>::call<QtPrivate::List<>, void> (arg=<optimized out>, f=...) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:256
#8  QtPrivate::QFunctorSlotObject<KWaylandServer::DpmsInterface::DpmsInterface(KWaylandServer::OutputInterface*, wl_resource*)::<lambda()>, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *)
    (which=<optimized out>, this_=0x56077fc39780, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:443
#9  0x00007ff9dff25402 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7fffc8304170, r=0x560780443c40, this=0x56077fc39780) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#10 doActivate<false>(QObject*, int, void**) (sender=0x5607805c7620, signal_index=14, argv=0x7fffc8304170) at kernel/qobject.cpp:3923
#11 0x00007ff9e19cb669 in KWin::Output::setState(KWin::Output::State const&) (this=0x5607805c7620, state=...) at /usr/src/debug/kwin-5.27.3/src/core/output.cpp:292
#12 0x00007ff9e1b79e45 in KWin::DrmOutput::updateDpmsMode(KWin::Output::DpmsMode) (this=this@entry=0x5607805c7620, dpmsMode=dpmsMode@entry=KWin::Output::DpmsMode::Off) at /usr/src/debug/kwin-5.27.3/src/backends/drm/drm_output.cpp:353
#13 0x00007ff9e1b7af98 in KWin::DrmOutput::setDrmDpmsMode(KWin::Output::DpmsMode) (this=0x5607805c7620, mode=KWin::Output::DpmsMode::Off) at /usr/src/debug/kwin-5.27.3/src/backends/drm/drm_output.cpp:276
#14 0x00007ff9dff25402 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7fffc8304440, r=0x5607805c7620, this=0x56077fd11fb0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#15 doActivate<false>(QObject*, int, void**) (sender=0x5607805c7718, signal_index=3, argv=0x7fffc8304440) at kernel/qobject.cpp:3923
#16 0x00007ff9dff1dfff in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (sender=<optimized out>, m=m@entry=0x7ff9e01c79a0, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fffc8304440) at kernel/qobject.cpp:3983
#17 0x00007ff9dff291ea in QTimer::timeout(QTimer::QPrivateSignal) (this=<optimized out>, _t1=...) at .moc/moc_qtimer.cpp:205
#18 0x00007ff9dff18d2b in QObject::event(QEvent*) (this=0x5607805c7718, e=0x7fffc8304590) at kernel/qobject.cpp:1369
#19 0x00007ff9df5a52ce in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=<optimized out>, receiver=0x5607805c7718, e=0x7fffc8304590) at kernel/qapplication.cpp:3640
#20 0x00007ff9dfeecb28 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x5607805c7718, event=0x7fffc8304590) at kernel/qcoreapplication.cpp:1064
#21 0x00007ff9dff454a9 in QTimerInfoList::activateTimers() (this=this@entry=0x56077e625e78) at kernel/qtimerinfo_unix.cpp:643
#22 0x00007ff9dff42c0c in QEventDispatcherUNIXPrivate::activateTimers() (this=this@entry=0x56077e625df0) at kernel/qeventdispatcher_unix.cpp:249
#23 0x00007ff9dff43980 in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=<optimized out>, flags=...) at kernel/qeventdispatcher_unix.cpp:516
#24 0x000056077c9bc3dd in QUnixEventDispatcherQPA::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=<optimized out>, flags=...) at qunixeventdispatcher.cpp:63
#25 0x00007ff9dfeeb5cb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7fffc8304730, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#26 0x00007ff9dfef3a50 in QCoreApplication::exec() () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#27 0x00007ff9e036fe4c in QGuiApplication::exec() () at kernel/qguiapplication.cpp:1870
#28 0x00007ff9df5a5245 in QApplication::exec() () at kernel/qapplication.cpp:2832
#29 0x000056077c8dfefa in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kwin-5.27.3/src/main_wayland.cpp:628
```

SYSTEM
Operating System: openSUSE Tumbleweed 20230321
KDE Plasma Version: 5.27.3
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8
Kernel Version: 6.2.6-1-default (64-bit)
Graphics Platform: Wayland
Graphics Processor: AMD Radeon RX 580 Series
Comment 6 postix 2023-03-25 15:16:11 UTC
Created attachment 157572 [details]
kWin Support Info: openSUSE TW, 5.27.3
Comment 7 postix 2023-03-25 15:17:13 UTC
*** Bug 467298 has been marked as a duplicate of this bug. ***
Comment 8 postix 2023-03-26 14:38:44 UTC
It would be great if someone could look into this. For now I have disabled the the power savings to turn off the screen in order to avoid kwin_wayland tearing down my whole session every now and then. :P
Comment 9 Bug Janitor Service 2023-03-27 00:13:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3884
Comment 10 Bug Janitor Service 2023-03-27 13:31:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3887
Comment 11 Vlad Zahorodnii 2023-03-27 13:50:24 UTC
Git commit fb3018b711ac41c364ee83c5ea1e865a8b9c11bd by Vlad Zahorodnii, on behalf of Aleix Pol.
Committed on 27/03/2023 at 13:36.
Pushed by vladz into branch 'master'.

dpms: Make sure we are not calling the interface after the output is gone

It seems it's possible at times, as described in the bug.

M  +8    -0    src/wayland/dpms_interface.cpp

https://invent.kde.org/plasma/kwin/commit/fb3018b711ac41c364ee83c5ea1e865a8b9c11bd
Comment 12 Aleix Pol 2023-03-27 14:34:57 UTC
Git commit 737af922c0b15a3038521836e68cd3245bb38b80 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 27/03/2023 at 14:08.
Pushed by apol into branch 'Plasma/5.27'.

dpms: Make sure we are not calling the interface after the output is gone

It seems it's possible at times, as described in the bug.


(cherry picked from commit fb3018b711ac41c364ee83c5ea1e865a8b9c11bd)

M  +8    -0    src/wayland/dpms_interface.cpp

https://invent.kde.org/plasma/kwin/commit/737af922c0b15a3038521836e68cd3245bb38b80
Comment 13 postix 2023-03-27 14:38:04 UTC
Thanks Aleix!
Comment 14 Zamundaaa 2023-03-28 11:55:14 UTC
*** Bug 467881 has been marked as a duplicate of this bug. ***
Comment 15 David Edmundson 2023-03-28 12:52:06 UTC
*** Bug 467795 has been marked as a duplicate of this bug. ***
Comment 16 kfsbgd4o48tf 2023-04-07 17:51:26 UTC
Still experiencing crash on 5.27.4


                Stack trace of thread 1348:
                #0  0x00007efd2b9b56f3 _ZN4KWin12DrmGammaRampC2EPNS_7DrmCrtcERKSt10shared_ptrINS_19ColorTransformationEE (libkwin.so.5 + 0x3b56f3)
                #1  0x00007efd2b9b5dd8 _ZN4KWin9DrmOutput12setGammaRampERKSt10shared_ptrINS_19ColorTransformationEE (libkwin.so.5 + 0x3b5dd8)
                #2  0x00007efd2b7eea0a _ZN4KWin11ColorDevice6updateEv (libkwin.so.5 + 0x1eea0a)
                #3  0x00007efd29ed0e96 _Z10doActivateILb0EEvP7QObjectiPPv (libQt5Core.so.5 + 0x2d0e96)
                #4  0x00007efd2b7f9731 _ZN4KWin6Output8setStateERKNS0_5StateE (libkwin.so.5 + 0x1f9731)
                #5  0x00007efd2b9aac99 _ZN4KWin9DrmOutput14updateDpmsModeENS_6Output8DpmsModeE (libkwin.so.5 + 0x3aac99)
                #6  0x00007efd2b9abd8d _ZN4KWin9DrmOutput14setDrmDpmsModeENS_6Output8DpmsModeE (libkwin.so.5 + 0x3abd8d)
                #7  0x00007efd2b9abfb6 _ZN4KWin9DrmOutput11setDpmsModeENS_6Output8DpmsModeE (libkwin.so.5 + 0x3abfb6)
                #8  0x00007efd2b98573b _ZN4KWin10DrmBackend13turnOutputsOnEv (libkwin.so.5 + 0x38573b)
                #9  0x00007efd2b9b4af0 _ZN4KWin9DrmOutput18applyQueuedChangesERKNS_19OutputConfigurationE (libkwin.so.5 + 0x3b4af0)
                #10 0x00007efd2b98dccf _ZN4KWin10DrmBackend18applyOutputChangesERKNS_19OutputConfigurationE (libkwin.so.5 + 0x38dccf)
                #11 0x00007efd2b938a45 _ZN4KWin9Workspace24applyOutputConfigurationERKNS_19OutputConfigurationERK7QVectorIPNS_6OutputEE (libkwin.so.5 + 0x338a45)
                #12 0x00007efd2ba0d7da _ZN14KWaylandServer30OutputConfigurationV2Interface33kde_output_configuration_v2_applyEPN15QtWaylandServer27kde_output_configuration_v28ResourceE (libkwin.so.5 + 0x40d7da)
                #13 0x00007efd270e3a06 ffi_call_unix64 (libffi.so.8 + 0x7a06)
                #14 0x00007efd270e049d ffi_call_int.lto_priv.0 (libffi.so.8 + 0x449d)
                #15 0x00007efd270e3083 ffi_call (libffi.so.8 + 0x7083)
                #16 0x00007efd286b5728 wl_closure_invoke.constprop.0 (libwayland-server.so.0 + 0x9728)
                #17 0x00007efd286b9ac8 wl_client_connection_data (libwayland-server.so.0 + 0xdac8)
                #18 0x00007efd286b8532 wl_event_loop_dispatch (libwayland-server.so.0 + 0xc532)
                #19 0x00007efd2b9ee186 _ZN14KWaylandServer7Display14dispatchEventsEv (libkwin.so.5 + 0x3ee186)
                #20 0x00007efd29ed0e96 _Z10doActivateILb0EEvP7QObjectiPPv (libQt5Core.so.5 + 0x2d0e96)
                #21 0x00007efd29ed3703 _ZN15QSocketNotifier9activatedE17QSocketDescriptorNS_4TypeENS_14QPrivateSignalE (libQt5Core.so.5 + 0x2d3703)
                #22 0x00007efd29ed3f25 _ZN15QSocketNotifier5eventEP6QEvent (libQt5Core.so.5 + 0x2d3f25)
                #23 0x00007efd295aed62 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt5Widgets.so.5 + 0x1aed62)
                #24 0x00007efd29e9d4e8 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt5Core.so.5 + 0x29d4e8)
                #25 0x00007efd29eeba8e _ZN27QEventDispatcherUNIXPrivate23activateSocketNotifiersEv (libQt5Core.so.5 + 0x2eba8e)
                #26 0x00007efd29eebecd _ZN20QEventDispatcherUNIX13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt5Core.so.5 + 0x2ebecd)
                #27 0x0000558a0d4f15c1 _ZN23QUnixEventDispatcherQPA13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (kwin_wayland + 0x13b5c1)
                #28 0x00007efd29e9bf3a _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE (libQt5Core.so.5 + 0x29bf3a)
                #29 0x00007efd29ea4002 _ZN16QCoreApplication4execEv (libQt5Core.so.5 + 0x2a4002)
                #30 0x0000558a0d411d21 main (kwin_wayland + 0x5bd21)
                #31 0x00007efd28e4a510 __libc_start_call_main (libc.so.6 + 0x27510)
                #32 0x00007efd28e4a5c9 __libc_start_main@@GLIBC_2.34 (libc.so.6 + 0x275c9)
                #33 0x0000558a0d413885 _start (kwin_wayland + 0x5d885)

Operating System: Fedora Linux 37
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8
Kernel Version: 6.2.9-200.fc37.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5800H with Radeon Graphics
Memory: 13.5 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: LENOVO
Product Name: 82MS
System Version: Lenovo XiaoXinPro 14ACH 2021
Comment 17 kfsbgd4o48tf 2023-04-07 17:53:57 UTC
Created attachment 157931 [details]
kwin_wayland stack trace
Comment 18 Aleix Pol 2023-04-07 23:52:00 UTC
This new backtrace looks nothing like the former one. Can you please open a new bug?
Comment 19 kfsbgd4o48tf 2023-04-08 07:08:32 UTC
(In reply to Aleix Pol from comment #18)
> This new backtrace looks nothing like the former one. Can you please open a
> new bug?

OK, will open a new one