dpms: Make sure we are not calling the interface after the output is gone

It seems it's possible at times, as described in the bug.

BUG: 466346